--- a/po/wesnoth/hu.po
+++ b/po/wesnoth/hu.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: hu-wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-02 16:20+0100\n"
+"PO-Revision-Date: 2012-01-17 07:44+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -147,7 +147,7 @@ msgstr "12 órás időformátum"
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:149
 msgid "Confirm loading of saves from a different version"
-msgstr "Megerősítés kérése más játékverziójú mentések betöltése előtt"
+msgstr "Megerősítés kérése más verziójú mentések betöltése előtt"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:156
@@ -2311,8 +2311,12 @@ msgstr "Nem hivatalos Wesnoth-kiszolgáló"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:7
-msgid "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
-msgstr "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
+msgid ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
+msgstr ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:8
@@ -3096,7 +3100,7 @@ msgid ""
 "if they occupy a village hex, they do not gain any defensive benefits from "
 "the village, although they will still be healed."
 msgstr ""
-"A <i>szilaj</i> egységek – például denevérek, vadállatok – elkerülik a "
+"A <i>kóbor</i> egységek – például denevérek, vadállatok – elkerülik a "
 "falvakat. Még ha el is foglalnak egy falut, nem nyújt jobb védelmet "
 "számukra, habár a többi egységhez hasonlóan gyógyulnak."
 
