--- a/po/wesnoth-l/hu.po
+++ b/po/wesnoth-l/hu.po
@@ -5,15 +5,15 @@
 # This file is released under the same license as the Battle for Wesnoth package.
 #
 # Kovács Dániel <consalamander@kalandozok.hu>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2011.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2011, 2012.
 # Udvari Zsolt <udvzsolt@gmail.com>, 2008.
 # Fábián Balázs <nermal92@freemail.hu>, 2008, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-l_1.4_1.5\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-22 10:52+0100\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-17 07:36+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <kde-i18n-doc@kde.org>\n"
 "Language: hu\n"
@@ -2809,18 +2809,13 @@ msgstr "Paraszt vadászmester"
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
 "A vadászmesterek egész életüket a vadon fái közt és mocsaraiban töltötték. "
-"Telibe tudnak találni egy vérszívó denevért és követik bármi nyomát, ami a "
+"Telibe tudnak találni egy vérszívó denevért, és követik bármi nyomát, ami a "
 "területükön áthalad."
 
 #. [object]: id={ID}
