--- a/po/wesnoth-utbs/hu.po
+++ b/po/wesnoth-utbs/hu.po
@@ -6,21 +6,21 @@
 # Soltész Adrián <majominia@gmail.com> 2005-2007.
 # Kelemen Zoltán <kelemen_zoltan@freemail.hu>. 2008., 2009.
 # Pintér Csaba <piere-d-siorac@freemail.hu>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2009, 2010.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2009, 2010, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-utbs_1.4_1.5\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-13 12:52+0100\n"
-"Last-Translator: Kelemen Zoltan <kelemen_zoltan@freemail.hu>\n"
+"PO-Revision-Date: 2012-01-17 07:38+0100\n"
+"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.1\n"
+"X-Generator: Lokalize 1.2\n"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #. [editor_group]: id=utbs
@@ -15261,6 +15261,8 @@ msgstr "Sivatagi sámánnő"
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:34
 msgid "Desert Shamans focus on less violent ways to hinder the enemy."
 msgstr ""
+"A sivatagi sámánok kevésbé erőszakos módszereket alkalmaznak az ellenség "
+"leterítésére."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:50
