updated Italian translation

--- a/po/wesnoth-l/it.po
+++ b/po/wesnoth-l/it.po
@@ -1,10 +1,12 @@
+# translation of it.po to Italian
+# Antonio Rosella <arosella@yahoo.com>, 2010-2012
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-11-19 16:57+0100\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-16 21:27+0100\n"
+"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -1894,7 +1896,6 @@ msgstr "Gloria"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:25
-#, fuzzy
 msgid ""
 "In the Year of Wesnoth 161, the newly crowned king sought to tame the "
 "wildlands that separated the human cities surrounding Weldyn and the coastal "
@@ -1902,7 +1903,7 @@ msgid ""
 msgstr ""
 "Nell’anno 161 di Wesnoth, il nuovo re cercò di rendere sicure una volta per "
 "tutte le terre selvagge che separavano le città degli uomini attorno a "
-"Weldyn a le regioni costiere di Elensefar."
+"Weldyn e le regioni costiere di Elensefar."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:28
@@ -2820,20 +2821,15 @@ msgstr "Contadino maestro di caccia"
 # XXX wamprats? ratti-?
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
 "I maestri cacciatori hanno speso tutta la vita nelle zone boscose e nelle "
-"paludi delle zone selvagge della loro patria. Riescono a centrare anche i "
-"topolini d’acqua e seguono le tracce di chiunque penetri nel loro "
-"territorio. Sono abilissimi nella caccia notturna."
+"paludi delle zone selvagge della loro patria. Riescono a centrare in pieno i "
+"feroci ratti di palude e seguono le tracce di chiunque penetri nel loro "
+"territorio."
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:54
