--- a/po/wesnoth-did/it.po
+++ b/po/wesnoth-did/it.po
@@ -1,14 +1,15 @@
 # translation of it.po to Italian
 # Luciano Montanaro <mikelima@cirulla.net>, 2007.
 # Brivido <brivido(at)gmail.com>, 2007.
+# Antonio Rosella <arosella@yahoo.com>, 2011,2012
 # translation of wesnoth-did.pot to Italian
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-01-16 10:58+0100\n"
-"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-01-17 11:28+0100\n"
+"Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
