--- a/po/wesnoth-low/it.po
+++ b/po/wesnoth-low/it.po
@@ -1,3 +1,5 @@
+# translation of it.po to Italian
+# Antonio Rosella <arosella@yahoo.com>, 2011-2012
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
