--- a/po/wesnoth-tutorial/it.po
+++ b/po/wesnoth-tutorial/it.po
@@ -1,11 +1,12 @@
 # translation of it.po to Italian
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007, 2008, 2009, 2010, 2011.
+# Antonio Rosella <arosella@yahoo.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-03 10:40+0100\n"
-"PO-Revision-Date: 2011-09-10 11:58+0200\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-17 11:00+0100\n"
 "Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -306,31 +307,21 @@ msgstr "Corone"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:460
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Konrad) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"Nota: la coroncina blu vicino a Delfador significa che se fosse ucciso la "
+"la coroncina metallica vicino a Delfador significa che se fosse ucciso la "
 "partita sarebbe persa. Lo stesso accadrebbe se il tuo condottiero (Konrad) "
 "cadesse in battaglia."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:464
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Li’sar) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
 msgstr ""
-"Nota: la coroncina blu vicino a Delfador significa che se fosse ucciso "
+"La coroncina metallica vicino a Delfador significa che se fosse ucciso "
 "perderesti la partita. Lo stesso accadrebbe se il tuo condottiero (Li’sar) "
 "cadesse in battaglia."
 
@@ -771,7 +762,6 @@ msgstr "Difesa"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1049
-#, fuzzy
 msgid ""
 "Whenever one of your units is selected, you’ll see varying percentages as "
 "you move the mouse over the map. The higher the percentage, the more "
@@ -780,12 +770,12 @@ msgid ""
 "rivers. However, these quintains use a <i>magical</i> attack, which always "
 "has a 70% chance of hitting no matter what terrain its target occupies."
 msgstr ""
-"Note:\n"
-"Una volta che avrai selezionato una unità, vedrai delle percentuali per ogni "
-"terreno differente: più sono alte più il terreno è difendibile. Per esempio, "
-"la difesa è buona nei castelli e nei villaggi, cattiva nei fiumi. Però gli "
-"attacchi dei fantocci sono magici, pertanto hanno una possibilità di colpire "
-"del 70%, dovunque tu sia."
+"Una volta che avrai selezionato una unità, muovendo il mouse sulla mappa "
+"vedrai delle percentuali differenti per ogni tipo terreno: più sono alte più "
+"quel terreno è <i>difendibile</i> dall'unità. Per esempio, molte unità hanno "
+"una buona difesa nei castelli e nei villaggi ma cattiva nei fiumi. Però gli "
+"attacchi dei fantocci sono <i>magici</i>, pertanto hanno una possibilità di "
+"colpire del 70%, dovunque tu sia."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1074
@@ -855,7 +845,6 @@ msgstr "Vittoria"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1179
-#, fuzzy
 msgid ""
 "After your victory notice, the map will be grayed out to indicate that the "
 "scenario is over, but you will still be able to examine the final positions "
@@ -865,8 +854,10 @@ msgid ""
 msgstr ""
 "Dopo la notifica della vittoria, la mappa verrà mostrata in grigio per "
 "indicare che lo scenario è finito, ma ti sarà possibile esaminare le "
-"posizioni finali e lo stato delle truppe prima di premere il pulsante "
-"«Termina scenario» per continuare col prossimo scenario."
+"posizioni finali, lo stato delle tue truppe  ed anche gli eventuali nemici "
+"sopravvissuti alla battaglia. In gergo si chiama <i>modalità ritardata</i>. "
+"Una volta che avrai terminato di esaminare tutto, premi il pulsante "
+"<b>Termina scenario</b> per continuare col prossimo scenario della campagna."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/2_Speaking.cfg:30
@@ -1077,7 +1068,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:495
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:496
 msgid "Shallow"
-msgstr ""
+msgstr "Guado"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:497
@@ -1662,15 +1653,15 @@ msgstr ""
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1214
-#, fuzzy
 msgid ""
 "We need to occupy that village, otherwise they will take it next turn! Move "
 "a unit into the village to stop the orcs capturing it. Whichever unit you "
 "choose will benefit from the village’s healing, too."
 msgstr ""
-"Dobbiamo occupare quel villaggio, altrimenti loro lo occuperanno durante il "
-"prossimo turno! Muovi la tua unità ferita per occuparlo e per curare "
-"l’unità, quindi uccidi quell’orco!"
+"Dobbiamo occupare quel villaggio, altrimenti lo occuperanno loro durante il "
+"prossimo turno! Muovi una unità sul villaggio per impedire agli orchi di "
+"catturarlo. Qualunque unità tu scelga, verrà anche curata dagli abitanti del "
+"villaggio"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1226
@@ -1694,12 +1685,6 @@ msgstr "<big>Ora del giorno</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1228
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "After this dialog, hold the mouse over the landscape image above the "
-#| "minimap on the right. This brings up a description of the time of day, "
-#| "showing who has the advantage."
 msgid ""
 "\n"
 "After this dialog, hold the mouse over the landscape image below the minimap "
@@ -1708,8 +1693,8 @@ msgid ""
 msgstr ""
 "\n"
 "Dopo di questa finestra di dialogo, porta il mouse sull’immagine del "
-"panorama sopra la mappa a destra dello schermo. Vedrai una descrizione del "
-"periodo della giornatae mostrerà chi è in vantaggio."
+"panorama sotto la mappa a destra dello schermo. Vedrai una descrizione del "
+"periodo della giornata e mostrerà chi è in vantaggio."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1235
